--- a/.github/worflows/worflow.yml
+++ b/.github/worflows/worflow.yml
@@ -1,28 +1,15 @@
 name: build and test
 on: [push, pull_request]
 jobs:
-  build:
+  build-test:
     name: Build
+    runs-on: ubuntu-latest
     steps:
-      - name: checkout master
-        uses: actions/checkout@master
-      - name: Setup Go
+      - name: Set up Go 1.13
         uses: actions/setup-go@v1
         with:
-          go-version: '1.13.x'
-      - name: BSuild
+          go-version: 1.12
+      - name: Build
         run: go build -v
-      - name: test
-        run: go test -v
-
-  test:
-    name: Test
-    steps:
-      - name: checkout master
-        uses: actions/checkout@master
-      - name: Setup Go
-        uses: actions/setup-go@v1
-        with:
-          go-version: '1.13.x'
       - name: test
         run: go test -v
