--- a/.github/worflows/main.yml
+++ b/.github/worflows/main.yml
@@ -1,5 +1,11 @@
 name: build and test
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+    pull_request:
+      branches:
+        - master
 jobs:
   build-test:
     name: Build
