Auto scroll paragraph. Debug mode (#28)
* return err

* download samples on first app start

* add correct URL to download samples.gz

* Scroll for overflowing paragraph sample

* Phonify make commands

* Logger only for debug mode

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@ termracer
 build
 
 # local samples
-examples
+**/samples
 
-# logs
-logs
+# debug logs
+app.log
 
 # Local filestorage
 racehistory.csv
